# loovie-community

./: .gitignore  .lycheeignore  .markdownlint-cli2.jsonc  .markdownlint.json  .markdownlintignore  .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LEGAL.md  NOTICE  README.md  SECURITY.md  __init__.py  release-please-config.json
.claude-plugin/: marketplace.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  spec_change.yml  workflow_contribution.yml
.github/workflows/: actionlint.yml  cli-publish.yml  codeql.yml  comfy-publish.yml  contract.yml  docker.yml  dxt-build.yml  gh-pages.yml  lychee.yml  markdownlint.yml  openapi-lint.yml  packages-cli-ci.yml  plugin-validate.yml  pr-title.yml  python.yml  release-please.yml  scorecard.yml  smithery-publish.yml
comfyui-loovie/: README.md  __init__.py  config.yaml  pyproject.toml  requirements.txt
comfyui-loovie/scripts/: install.sh
comfyui-loovie/src/comfyui_loovie/: __init__.py  callback_sender.py  capabilities.py  monitor.py  task_store.py  validators.py  workflow_manager.py
comfyui-loovie/src/comfyui_loovie/helpers/: __init__.py  aspect_ratio.py  compat.py  image_cache.py
comfyui-loovie/src/comfyui_loovie/nodes/: __init__.py  loovie_audio_gate.py  loovie_image_input.py  loovie_lora_stack.py  loovie_settings.py  loovie_text_input.py  loovie_video_input.py  loovie_video_settings.py
comfyui-loovie/src/comfyui_loovie/server/: __init__.py  routes.py
comfyui-loovie/tests/: conftest.py  test_aspect_ratio.py  test_auth.py  test_capabilities.py  test_image_cache.py  test_task_store.py  test_validators.py  test_workflow_manager.py
comfyui-loovie/workflows/: flux_2_klein.json  ltx23_fl2v_fast.json  ltx23_fl2v_pro.json  ltx23_i2v_fast.json  ltx23_i2v_pro.json  ltx23_t2v_fast.json  ltx23_t2v_pro.json
docker/: Dockerfile  README.md  download_models.sh  entrypoint.sh  extra_model_paths.yaml  models.manifest  runpod-template.json
docs/: 00-overview.md  10-create-a-loovie-account.md  15-terms-and-privacy.md  20-quickstart-your-own-machine.md  25-huggingface-and-gated-models.md  30-runpod.md  40-cloudflare-tunnel.md  50-security-and-tokens.md  60-configure-the-app.md  70-troubleshooting.md  80-adding-a-workflow.md  85-editing-api-workflows.md  90-the-contract.md  MODELS.md
examples/minimal-server/: README.md  app.py  pyproject.toml
examples/minimal-server/tests/: test_app.py
loovie-mcp/: .mcp.json  README.md  manifest.json
loovie-mcp/.claude-plugin/: plugin.json
loovie-mcp/commands/: loovie-credits.md  loovie-new-project.md  loovie-status.md
loovie-mcp/skills/character-from-photo/: SKILL.md
loovie-mcp/skills/creating-a-character-from-photo/: SKILL.md
loovie-mcp/skills/creating-a-character-from-photo/evals/: evals.json
loovie-mcp/skills/editing-an-existing-project/: SKILL.md
loovie-mcp/skills/editing-an-existing-project/evals/: evals.json
loovie-mcp/skills/exporting-and-sharing/: SKILL.md
loovie-mcp/skills/exporting-and-sharing/evals/: evals.json
loovie-mcp/skills/making-a-loovie-video/: SKILL.md
loovie-mcp/skills/making-a-loovie-video/evals/: evals.json
openapi/: README.md  loovie-server.openapi.yaml
scripts/: new-token.sh
