[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "comfyui-loovie"
version = "0.2.0-beta.1"
description = "Reference ComfyUI server implementing the Loovie BYO protocol (FLUX.2 Klein image + LTX-2.3 single-shot video)."
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Loovie HQ", email = "oss@loovie.app" }]
keywords = ["comfyui", "loovie", "byo", "ai-image", "ai-video", "openapi"]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Multimedia :: Video",
]
dependencies = [
  "aiohttp>=3.9",
  "pydantic>=2.6",
  "httpx>=0.27",
  "imageio[ffmpeg]>=2.34.0",
  "PyYAML>=6.0",
]

[project.urls]
Repository    = "https://github.com/looviehq/loovie-community"
Documentation = "https://github.com/looviehq/loovie-community/tree/main/docs"
"Bug Tracker" = "https://github.com/looviehq/loovie-community/issues"

[project.optional-dependencies]
# `referencing` is pulled by jsonschema 4.18+ but listed explicitly so
# tests that build a Registry don't depend on a transitive.
#
# `schemathesis` deliberately does NOT live here, it's a contract
# test tool that runs against examples/minimal-server in CI, not
# against this package. Putting it here would balloon CI install
# time with hypothesis + numpy.random surface area.
dev = [
  "ruff",
  "mypy",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "jsonschema>=4.18",
  "referencing>=0.30",
  "types-PyYAML",
]

[tool.comfy]
PublisherId  = "looviehq"
DisplayName  = "Loovie BYO Server"
Icon         = ""

[tool.ruff]
line-length    = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.mypy]
python_version = "3.10"
strict         = true
files          = ["src/comfyui_loovie"]

[tool.pytest.ini_options]
testpaths    = ["tests"]
asyncio_mode = "auto"
# Coverage gate: 70% on the in-scope modules. The omits below scope the
# measurement to pure-logic modules that can be tested without ComfyUI.
# Node classes, the WebSocket monitor, and the large HTTP-handler bodies
# in `server/routes.py` are exercised when ComfyUI actually runs them,
# not in unit tests; covering them requires a live ComfyUI integration
# harness which is tracked for A.9.5 hardening.
addopts      = "--cov=comfyui_loovie --cov-report=term-missing --cov-fail-under=70"

[tool.coverage.run]
branch = true
source = ["comfyui_loovie"]
omit = [
  # ComfyUI runtime node implementations, only exercised when ComfyUI
  # instantiates them. The interface (registration, INPUT_TYPES,
  # RETURN_TYPES) is exercised at import time and counts elsewhere.
  "src/comfyui_loovie/nodes/loovie_image_input.py",
  "src/comfyui_loovie/nodes/loovie_lora_stack.py",
  "src/comfyui_loovie/nodes/loovie_settings.py",
  "src/comfyui_loovie/nodes/loovie_text_input.py",
  "src/comfyui_loovie/nodes/loovie_video_input.py",
  "src/comfyui_loovie/nodes/loovie_video_settings.py",
  "src/comfyui_loovie/nodes/loovie_audio_gate.py",
  # WebSocket polling of ComfyUI's `/ws` and `/history` endpoints; needs
  # a live ComfyUI to exercise.
  "src/comfyui_loovie/monitor.py",
  # transformers monkey-patches shim for upstream API churn.
  "src/comfyui_loovie/helpers/compat.py",
  # Heavy aiohttp handlers that need a live PromptServer instance. The
  # auth helpers in this file are covered in test_auth.py; the larger
  # request/response paths are tracked for A.9.5.
  "src/comfyui_loovie/server/routes.py",
  # Helper that just downloads URLs to disk; needs a real network or
  # a substantial mock harness. The validate_url SSRF guard IS covered
  # in test_image_cache.py.
  "src/comfyui_loovie/helpers/image_cache.py",
  # Outbound callback HTTP poster; only exercised when a workflow run
  # specifies a `callback_url`.
  "src/comfyui_loovie/callback_sender.py",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
