# Not published. This is a reference implementation of the Loovie BYO
# HTTP contract written in FastAPI. It exists so people writing their
# own server in any stack can validate connectivity, auth, and the
# capabilities flow without provisioning a GPU.
#
# It returns placeholder media (bundled sample assets) so the contract
# can be exercised end-to-end on a laptop. It is NOT a generation server.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loovie-byo-minimal-server"
version = "0.1.0"
description = "Framework-agnostic FastAPI reference for the Loovie BYO HTTP contract (placeholder outputs, no GPU needed)."
license = { file = "../../LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Loovie HQ", email = "oss@loovie.app" }]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.30",
  "python-multipart>=0.0.9",
  "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "httpx>=0.27",
  # Schemathesis 4.x renamed several CLI flags (notably --base-url -> --url)
  # and made non-trivial behavioural changes; we pin to 3.x for now and
  # plan a standalone migration once the 3.x train stops getting fixes.
  "schemathesis>=3.30,<4",
  "openapi-spec-validator>=0.7",
  "ruff",
]

[tool.hatch.build.targets.wheel]
# Single-file module; nothing to publish anyway.
packages = ["app.py"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
